@startuml
top to bottom direction

skinparam class {
    BackgroundColor White
    BorderColor Black
    ArrowColor Black
    FontSize 13
}

' 方法一：直接强制纵向布局（推荐）
class com.qsnn.homeSphere.HomeSphereSystem {
  + createDevice(): void
}

class com.qsnn.homeSphere.domain.deviceModule.Manufacturer {
  + createDevice(): Device
}

class com.qsnn.homeSphere.domain.deviceModule.Device {
  + formatToJsonString(): String
}

class com.qsnn.homeSphere.domain.deviceModule.devices.AirConditioner {
  + setTargetTemp(): void
}

class com.qsnn.homeSphere.domain.deviceModule.devices.LightBulb {
  + setBrightness(): void
}

class com.qsnn.homeSphere.domain.deviceModule.devices.SmartLock {
  + setLocked(): void
}

class com.qsnn.homeSphere.domain.deviceModule.devices.BathroomScale {
  + getBodyMass(): double
}

' 使用隐藏关系控制布局（纵向方向更可靠）
com.qsnn.homeSphere.HomeSphereSystem -[hidden]down- com.qsnn.homeSphere.domain.deviceModule.Manufacturer
com.qsnn.homeSphere.HomeSphereSystem -[hidden]down- com.qsnn.homeSphere.domain.deviceModule.Device
Manufacturer -[hidden]right Device
' 依赖与继承关系（与原图相同）
HomeSphereSystem .> Manufacturer
HomeSphereSystem .> Device
Manufacturer .> AirConditioner
Manufacturer .> LightBulb
Manufacturer .> SmartLock
Manufacturer .> BathroomScale

Device <|-- AirConditioner
Device <|-- LightBulb
Device <|-- SmartLock
Device <|-- BathroomScale

@enduml